--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "helmet": "^4.6.0",
     "mysql": "^2.18.1"
